<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TINAPA</string>
    <string name="action_settings">Settings</string>
    <string name="tab_pokedex">Dex</string>
    <string name="tab_owned_pokemon">Owned</string>
    <string name="tab_planned_pokemon">Plans</string>
    <string name="tab_teams">Teams</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="backup_restore">Backup/Restore</string>
    <string name="backup_restore_file_select_button_text">\.\.\.</string>

    <integer name="database_version">1</integer>

    <!-- Base Stat Names -->
    <string name="hp_short">HP</string>
    <string name="attack_short">Att</string>
    <string name="defense_short">Def</string>
    <string name="special_attack_short">SAtk</string>
    <string name="special_defense_short">SDef</string>
    <string name="speed_short">Spd</string>

    <string name="notes">Notes</string>
    <string name="save_changes">Save Changes</string>

    <string name="planned_iv_max">Max</string>
    <string name="planned_iv_random">\?</string>
    <string name="planned_iv_min">Min</string>

    <!-- Evolution Methods Text -->
    <string name="evolution_level">Level: </string>
    <string name="evolution_use_item">Use: </string>
    <string name="evolution_gender">Gender: </string>
    <string name="evolution_location">At </string>
    <string name="evolution_held_item">Hold: </string>
    <string name="evolution_time">During the </string>
    <string name="evolution_trade">Trade</string>
    <string name="evolution_move">Known Move: </string>
    <string name="evolution_move_type">Known Move Type: </string>
    <string name="evolution_happiness">Min. Happiness: </string>
    <string name="evolution_beauty">Min. Beauty: </string>
    <string name="evolution_affection">Min. Affection: </string>
    <string name="evolution_relative_stats">Stats: </string>
    <string name="evolution_party_species">In Party: </string>
    <string name="evolution_party_type">In Party: </string>
    <string name="evolution_trade_species">Trade for: </string>
    <string name="evolution_over_world_rain">In Rain</string>
    <string name="evolution_upside_down">Upside Down Device</string>

    <!-- Generated stuff that has not been sorted (you lazy bum.) Don't put anything past here. -->
    <string name="hello_world">Hello world!</string>
    <string name="team_pokemon_1_banner_text">Pokemon #1</string>
    <string name="team_pokemon_2_banner_text">Pokemon #2</string>
    <string name="team_pokemon_3_banner_text">Pokemon #3</string>
    <string name="team_pokemon_4_banner_text">Pokemon #4</string>
    <string name="team_pokemon_5_banner_text">Pokemon #5</string>
    <string name="team_pokemon_6_banner_text">Pokemon #6</string>

</resources>
