<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/team_member_click_banner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_pokemon_1_banner_text" />

        </LinearLayout>

        <include
            android:id="@+id/team_member_section1"
            layout="@layout/fragment_planned_add_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:id="@+id/team_member_click_banner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_pokemon_2_banner_text" />

        </LinearLayout>

        <include
            android:id="@+id/team_member_section2"
            layout="@layout/fragment_planned_add_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/team_member_click_banner3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_pokemon_3_banner_text" />

        </LinearLayout>

        <include
            android:id="@+id/team_member_section3"
            layout="@layout/fragment_planned_add_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/team_member_click_banner4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_pokemon_4_banner_text" />

        </LinearLayout>

        <include
            android:id="@+id/team_member_section4"
            layout="@layout/fragment_planned_add_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/team_member_click_banner5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_pokemon_5_banner_text" />

        </LinearLayout>

        <include
            android:id="@+id/team_member_section5"
            layout="@layout/fragment_planned_add_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/team_member_click_banner6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_pokemon_6_banner_text" />

        </LinearLayout>

        <include
            android:id="@+id/team_member_section6"
            layout="@layout/fragment_planned_add_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>